# BackendLabs

./: .gitignore  BUILD.md  CMakeLists.txt  config.json
isce/: CMakeLists.txt  README.md  isce.cmake
isce/include/isce/: Controller.h  DTO.h  File.h  Framework.h  Interaction.h  Model.h  Request.h  Response.h  Route.h  Schema.h  Utils.h  sqlAttrib.h
isce/lib/include/: Configure.h  Framework.h  Route.h
isce/lib/src/: Configure.cc  Framework.cc  HttpFramework.cc  Request.cc  Response.cc  Route.cc  RouteGroup.cc  RouteObject.cc
server/: CMakeLists.txt  config.h.inc  dto.h  main.cc  routes.cc
server/controllers/: info.cc  info.h
